Mainly done with batch decorators